--- a/layouts/posts.html
+++ b/layouts/posts.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/app.css">
 </head>
 <body ng-app="app">
 	<div ng-controller="PostsCtrl" class="container">
@@ -10,44 +11,22 @@
 			<div class="form-group">
 				<div class="input-group">
 					<input ng-model="postBody" class="form-control" />
-					<span class="input-group-button">
+					<span class="input-group-btn">
 						<button ng-click="addPost()" class="btn btn-default">Add Post</button> 
 					</span>
 				</div>
 			</div>
 		</form>
 		<ul class="list-group">
-			<li ng-repeat="post in posts" class="list-group-item">
+			<li ng-repeat="post in posts | orderBy: '-date'" class="list-group-item">
 				<strong>@{{ post.username }}</strong>
-				<span>{{ post.body }}</span>
+				<span>{{ post.textbody }}</span>
 			</li>
 		</ul>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-	<script>
-	var app = angular.module('app', []);
-	app.controller('PostsCtrl', function($scope) {
-		$scope.posts = [
-		{
-			username: 'dickeyxxx',
-			body: 'Node Rules!'
-		},
-		{
-			username: 'jeffdickey',
-			body: 'Trying out angular.js...'
-		}
-		]
-		$scope.addPost = function() {
-			if($scope.postBody) {
-				$scope.posts.unshift({
-					username: 'dickeyxxx',
-					body: $scope.postBody
-				})
-				$scope.postBody = null;
-			}
-		}
-	});
-	</script>
+	<script src="/app.js"></script>
+	
 </body>
 </html>
