--- a/views/app.html.ejs
+++ b/views/app.html.ejs
@@ -6,6 +6,16 @@
 </head>
 <body ng-app="app">
 	
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<ul class="nav navbar-nav">
+				<li><a href="/#/">Posts</a></li>
+				<li><a href="/#/register">Register</a></li>
+				<li><a href="/#/login">Login</a></li>
+			</ul>
+		</div>
+	</nav>
+
 	<div ng-view></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
