--- a/views/app.html.ejs
+++ b/views/app.html.ejs
@@ -4,15 +4,18 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/app.css">
 </head>
-<body ng-app="app">
+<body ng-app="app" ng-controller="ApplicationCtrl">
 	
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<ul class="nav navbar-nav">
 				<li><a href="/#/">Posts</a></li>
 				<li><a href="/#/register">Register</a></li>
-				<li><a href="/#/login">Login</a></li>
+				<li ng-if="!currentUser"><a href="/#/login">Login</a></li>
+				<li ng-if="currentUser"><a href="" ng-click="logout() && changeView('/login')">Logout</a></li>
 			</ul>
+			<p ng-if="currentUser" class="navbar-text navbar-right">
+				Signed in as {{ currentUser.username }}</p>
 		</div>
 	</nav>
 
