--- a/views/login.html.ejs
+++ b/views/login.html.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form ng-submit="login(username, password)">
+	<form name="loginForm" ng-submit="login(username, password) && loginForm.$setPristine()">
 		<div class="form-group">
 			<label>Username</label>
 			<input class="form-control" type="text" ng-model="username" />
